--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
-click==7.1.1
-flask==1.1.1
-Flask-BasicAuth==0.2.0
-itsdangerous==1.1.0
-Jinja2==2.11.1
-joblib==0.14.1
-MarkupSafe==1.1.1
-nltk==3.4.5
-numpy==1.18.2
-scipy==1.4.1
-six==1.14.0
-textblob==0.15.3
-Werkzeug==1.0.1
-pandas
-sklearn
-flask_cors
+click==8.0.3
+colorama==0.4.4
+Flask==1.1.1
+Flask-Cors==3.0.10
+gunicorn==20.1.0
+itsdangerous==2.0.1
+Jinja2==3.0.3
+joblib==1.1.0
+MarkupSafe==2.0.1
+numpy==1.22.1
+pandas==1.3.5
+python-dateutil==2.8.2
+pytz==2021.3
+scikit-learn==1.0.2
+scipy==1.7.3
+six==1.16.0
+sklearn==0.0
+threadpoolctl==3.0.0
+Werkzeug==2.0.2
